# EnergyBenchmarkingCapstone

./: cpu-atrace-20250913T224921.trace
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: BinaryTreesBenchmarkJs.js  FannkuchReduxBenchmarkJs.js  FastaBenchmarkJs.js  MandelbrotBenchmarkJs.js  NBodyBenchmarkJs.js  RevCompBenchmarkJs.js  SpectralNormBenchmarkJs.js
app/src/main/cpp/: BinaryTreesBenchmark.c  BinaryTreesBenchmark.h  BinaryTreesBenchmarkC.cpp  CMakeLists.txt  FannkuchReduxBenchmark.c  FannkuchReduxBenchmarkC.cpp  FannkuchReduxBenchmarkC.h  FastaBenchmark.c  FastaBenchmarkC.cpp  FastaBenchmarkC.h  MandelbrotBenchmark.c  MandelbrotBenchmarkC.cpp  MandelbrotBenchmarkC.h  NBodyBenchmarkC.cpp  NBodyBenchmarkC.h  NativeBenchmarks.java  NbodyBenchmark.c  RevCompBenchmark.c  RevCompBenchmarkC.cpp  RevCompBenchmarkC.h  SpectralNormBenchmark.c  SpectralNormBenchmarkC.cpp  SpectralNormBenchmarkC.h
app/src/main/java/com/example/myapplication/: BinaryTreesBenchmark.java  BinaryTreesBenchmarkKotlin.kt  FannkuchReduxBenchmark.java  FannkuchReduxBenchmarkKotlin.kt  FastaBenchmark.java  FastaBenchmarkKotlin.kt  MainActivity.java  MandelbrotBenchmark.java  MandelbrotBenchmarkKotlin.kt  NBodyBenchmark.java  NBodyBenchmarkKotlin.kt  NativeBenchmarks.java  RevCompBenchmark.java  RevCompBenchmarkKotlin.kt  SpectralNormBenchmark.java  SpectralNormBenchmarkKotlin.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
scripts/: run_benchmarks.sh
